k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hono-template
  labels:
    name: hono-template
    app: hono-template
